--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -44,7 +44,7 @@ $primary: $blue;
 // $badge-font-weight: normal;
 
 // // Override fonts
-// $font-family-sans-serif: 'Metropolis', sans-serif;
+$font-family-sans-serif: 'Verdana', sans-serif;
 // // $font-family-serif: Georgia, 'Times New Roman', Times, serif;
 // // $font-family-monospace: Menlo, Monaco, Consolas, 'Liberation Mono',
 // //   'Courier New', monospace;
