added user amount and editor for content

--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -15,7 +15,7 @@
 // $gray-lightest: #fafafa;
 
 // // Set brand colors
-$primary: $blue;
+$primary: rgba($darkBlue, 0.75);
 // $success: $green;
 // $info: $blue;
 // $warning: $orange;
