--- a/client/src/components/layouts/Main/Main.scss
+++ b/client/src/components/layouts/Main/Main.scss
@@ -10,7 +10,6 @@ body {
     -moz-transition: all 0.5s $transitionEasing2;
     -o-transition: all 0.5s $transitionEasing2;
     transition: all 0.5s $transitionEasing2;
-    background: $beige;
 }
 
 #wrapper.toggled {
@@ -26,8 +25,9 @@ body {
     margin-left: -250px;
     overflow-y: auto;
     // background-color: rgb(34, 37, 42);
-    background: #000000;
-    box-shadow: inset -16px 0px 16px -16px #000000;
+    background: rgba( $gray1, 0.5 );
+    border-right: solid 1px rgba( $darkBlue, 0.1 );
+    // box-shadow: inset -16px 0px 16px -16px #000000;
     -webkit-transition: all 0.5s $transitionEasing2;
     -moz-transition: all 0.5s $transitionEasing2;
     -o-transition: all 0.5s $transitionEasing2;
@@ -41,7 +41,7 @@ body {
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
+    padding: 0px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -49,88 +49,14 @@ body {
     margin-right: -250px;
 }
 
-/* Sidebar Styles */
-
-.sidebar-brand {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 250px;
-    height: 140px;
-    img {
-        width: 100px;
-        height: 100px;
-        border-radius: 5px;
-        overflow: hidden;
-        margin: 20px auto;
-        display: block; //box-shadow: 20px 0 20px -20px black, -20px 0 20px -20px black;
-    }
-}
-
-.sidebar-nav {
-    position: absolute;
-    top: 140px;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    // text-indent: 20px;    
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    padding-left: 20px;
-    display: block;
-    text-decoration: none;
-    color: #787280;
-    font-weight: 300;
-    background-color: rgba(0, 0, 0, 0.0);
-    transition: padding-left 0.5s ease-out;
-    &:hover {
-        text-decoration: none;
-        color: #8933ffd1;
-        background-color: rgba(0, 0, 0, 0.18);
-        padding-left: 30px;
-    }
-    &:active,
-    &:focus {
-        text-decoration: none;
-    }
-    span.fa // icon in link
-        {
-        display: inline-block;
-        margin-right: 5px;
-        width: 20px;
-    }
-}
-
-.sidebar-nav>.sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav>.sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav>.sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
 .topbar
 {
-    box-shadow: 0px 15px 15px -15px rgba(0, 0, 0, 0.1);
-
+    height: 56px;
     h1
     {
-        text-align: center;
-        font-size: 32px;
-        margin: 0px;
+        @include font1();
+        text-align: center;        
+        margin: 12px;
         span
         {
             animation: page_title;
@@ -139,14 +65,47 @@ body {
         }
     }
 
-    .burger-button
+    .burger-button-wrapper
     {
-        background-image: url("../../../assets/icon-navigation.svg");
-        height: 24px;
-        width: 24px;
-        &:hover
+        padding: 14px;
+        .burger-button
         {
-            cursor: pointer;
+            background-image: url("../../../assets/button-navigation.svg");
+            background-size: 28px 28px;
+            height: 28px;
+            width: 28px;
+            transform: rotateY(180deg);
+            transition: transform 1.0s $transitionEasing2;
+            &:hover
+            {
+                cursor: pointer;
+            }
+        }
+    }
+
+    .user-amount
+    {
+        text-align: right;
+        @include font2();
+        .icon-users
+        {
+            vertical-align: text-top;
+            background-image: url("../../../assets/icon-users.svg");
+            width: 24px;
+            height: 24px;
+            display: inline-block;
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+#wrapper.toggled 
+{
+    .topbar
+    {
+        .burger-button
+        {
+            transform: rotateY(0deg);
         }
     }
 }
@@ -165,7 +124,7 @@ body {
         width: 250px;
     }
     #page-content-wrapper {
-        padding: 20px;
+        padding: 0px;
         position: relative;
     }
     #wrapper.toggled #page-content-wrapper {
