--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -50,6 +50,17 @@ $gray1: #E0E1E9;
     font-family: Verdana, sans-serif;
 }
 
+// MAIN SMALL TEXT
+@mixin font5( $lineHeight: 20px, $fontSize: 12px, $color: $darkBlue, $fontWeight: 400, $letterSpacing: 0.0px )
+{
+    line-height: $lineHeight;
+    font-size: $fontSize;
+    color: $color;
+    font-weight: $fontWeight;
+    letter-spacing: $letterSpacing;
+    font-family: Verdana, sans-serif;
+}
+
 // BUTTON TEXTS
 @mixin font3( $lineHeight: 28px, $fontSize: 12px, $color: white, $fontWeight: bold, $letterSpacing: 0.0px )
 {
