--- a/server/emails/orderForCustomer/html.ejs
+++ b/server/emails/orderForCustomer/html.ejs
@@ -4,7 +4,7 @@
 <body>
     <div class="container">
         <h1>edition bohemica</h1>
-        <img src="https://edition-bohemica.dobschal.eu/logo.jpg" class="logo">
+        <img src="http://edition-bohemica.dobschal.eu/logo.jpg" class="logo">
         <p><b>Sehr geehrte(r) <%= recipientName %></b></p>
         <p>Danke für Ihre Bestellung bei <i><b>edition bohemica</b></i>. Anbei finden Sie noch einmal alle Informationen zu Ihrer Bestellung, sowie die Zahlungsinformation.</p>       
 
