--- a/client/src/styles/animation.scss
+++ b/client/src/styles/animation.scss
@@ -46,21 +46,21 @@
 {
     0%
     {
-      box-shadow: 0 0 0 0 rgba(255,255,255, 1.0);
+      box-shadow: 0 0 0 0 rgba($darkBlue, 0.2);
     }
     70%
     {
-        box-shadow: 0 0 0 10px rgba(255,255,255, 0);
+        box-shadow: 0 0 0 10px rgba($darkBlue, 0);
     }
     100%
     {
-        box-shadow: 0 0 0 0 rgba(255,255,255, 0);
+        box-shadow: 0 0 0 0 rgba($darkBlue, 0);
     }
 }
 
 .animation-pulse
 {
-    box-shadow: 0 0 0 rgba(255, 255, 255, 1.0);
+    box-shadow: 0 0 0 rgba($darkBlue, 0.2);
     animation: pulse 2s infinite;
     &:hover
     {
