--- a/client/src/components/layouts/Main/Main.scss
+++ b/client/src/components/layouts/Main/Main.scss
@@ -25,6 +25,7 @@ body {
     margin-left: -250px;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     // background-color: rgb(34, 37, 42);
     background: rgba( $gray1, 0.25 );
     border-right: solid 1px rgba( $darkBlue, 0.1 );
