Smaller changes in the emails

--- a/server/emails/orderForCustomer/html.ejs
+++ b/server/emails/orderForCustomer/html.ejs
@@ -6,7 +6,8 @@
         <h1>edition bohemica</h1>
         <img src="https://edition-bohemica.de/logo.jpg" class="logo">
         <p><b>Sehr geehrte(r) <%= recipientName %></b></p>
-        <p>Danke für Ihre Bestellung bei <i><b>edition bohemica</b></i>. Anbei finden Sie noch einmal alle Informationen zu Ihrer Bestellung. <br>Sie erhalten in Kürze eine weitere E-Mail mit der Rechnung und den Bezahlinformationen.</p>       
+        <p>Danke für Ihre Bestellung bei <i><b>edition bohemica</b></i>. Anbei finden Sie noch einmal alle Informationen zu Ihrer Bestellung. <br><br>
+        <b>Sie erhalten in Kürze eine weitere E-Mail mit der Rechnung und den Bezahlinformationen.</b></p>       
 
         <h2>Ihre Bestellung</h2>
         <% products.forEach(function(product){ %>
