--- a/server/emails/orderForProducer/html.ejs
+++ b/server/emails/orderForProducer/html.ejs
@@ -40,6 +40,10 @@
             <div class="col-50"><%= recipientName %></div>
         </div>
         <div class="row">
+            <div class="col-50">E-Mail</div>
+            <div class="col-50"><%= recipientEmail %></div>
+        </div>
+        <div class="row">
             <div class="col-50">Adresse</div>
             <div class="col-50"><%= recipientStreet %> <%= recipientHouseNumber %>, <br><%= recipientZipCode %> <%= recipientCity %><br><%= recipientCountry %></div>
         </div>    
