added loading state to checkout, and changed name in email

--- a/server/emails/orderForCustomer/html.ejs
+++ b/server/emails/orderForCustomer/html.ejs
@@ -58,7 +58,7 @@
         </p>
         <p>
             <b>Mit freundlichen Grüßen</b><br>
-            Andreas Petrak
+            Andreas W. Petrak
         </p>
     </div>
 </body>
