--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -1,3 +1,16 @@
+$grid-breakpoints: (
+  // Extra small screen / phone
+        xs: 0,
+  // Small screen / phone
+        sm: 520px,
+  // Medium screen / tablet
+        md: 1000px,
+  // Large screen / desktop
+        lg: 1250px,
+  // Extra large screen / wide desktop
+        xl: 1600px
+);
+
 // // Override / set color variables
 // $white: #fff;
 // $black: #000;
