remove web push

--- a/server/emails/orderForCustomer/html.ejs
+++ b/server/emails/orderForCustomer/html.ejs
@@ -4,7 +4,7 @@
 <body>
     <div class="container">
         <h1>edition bohemica</h1>
-        <img src="https://edition-bohemica.de/logo.jpg" class="logo">
+        <img src="https://editionbohemica.de/logo.jpg" class="logo">
         <p><b>Sehr geehrte(r) <%= recipientName %></b></p>
         <p>Danke für Ihre Bestellung bei <i><b>edition bohemica</b></i>. Anbei finden Sie noch einmal alle Informationen zu Ihrer Bestellung. <br><br>
         <b>Sie erhalten in Kürze eine weitere E-Mail mit der Rechnung und den Bezahlinformationen.</b></p>       
